--- a/scripts/pretrain/imagenet-100/augrelius.yaml
+++ b/scripts/pretrain/imagenet-100/augrelius.yaml
@@ -1,5 +1,6 @@
 defaults:
   - _self_
+  - augmentations: asymmetric.yaml
   - wandb: private.yaml
   - override hydra/hydra_logging: disabled
   - override hydra/job_logging: disabled
@@ -10,25 +11,33 @@ hydra:
   run:
     dir: .
 
-name: "barlow_twins-imagenet100-linear"
-pretrained_feature_extractor: None
+name: "augrelius-imagenet100"
+method: "augrelius"
 backbone:
   name: "resnet18"
-pretrain_method: "barlow_twins"
+method_kwargs:
+  proj_hidden_dim: 2048
+  proj_output_dim: 2048
+  shared_dim: 1024
+  exclusive_dim: 1024
 data:
   dataset: imagenet100
-  train_path: "./datasets/imagenet100/train"
-  val_path: "./datasets/imagenet100/val"
+  train_path: "./datasets/imagenet-100/train"
+  val_path: "./datasets/imagenet-100/val"
   format: "dali"
   num_workers: 16
 optimizer:
-  name: "sgd"
+  name: "lars"
   batch_size: 256
-  lr: 0.1
-  weight_decay: 0
+  lr: 0.3
+  classifier_lr: 0.1
+  weight_decay: 1e-4
+  kwargs:
+    clip_lr: True
+    eta: 0.02
+    exclude_bias_n_norm: True
 scheduler:
-  name: "step"
-  lr_decay_steps: [60, 80]
+  name: "warmup_cosine"
 checkpoint:
   enabled: True
   dir: "trained_models"
@@ -37,7 +46,7 @@ auto_resume:
   enabled: True
 
 # overwrite PL stuff
-max_epochs: 100
+max_epochs: 400
 devices: [0]
 sync_batchnorm: True
 accelerator: "gpu"
