--- a/scripts/linear/stl10/logless_sear.yaml
+++ b/scripts/linear/stl10/logless_sear.yaml
@@ -10,21 +10,20 @@ hydra:
   run:
     dir: .
 
-name: "barlow_twins-imagenet100-linear"
-pretrained_feature_extractor: None
+name: "logless-stl10-linear"
 backbone:
   name: "resnet18"
-pretrain_method: "barlow_twins"
+pretrain_method: "frossl"
 data:
-  dataset: imagenet100
-  train_path: "./datasets/imagenet100/train"
-  val_path: "./datasets/imagenet100/val"
-  format: "dali"
-  num_workers: 16
+  dataset: stl10
+  train_path: "./datasets/stl10"
+  val_path: "./datasets/stl10"
+  format: "image_folder"
+  num_workers: 8
 optimizer:
   name: "sgd"
   batch_size: 256
-  lr: 0.1
+  lr: 0.3
   weight_decay: 0
 scheduler:
   name: "step"
@@ -34,7 +33,7 @@ checkpoint:
   dir: "trained_models"
   frequency: 1
 auto_resume:
-  enabled: True
+  enabled: False
 
 # overwrite PL stuff
 max_epochs: 100
@@ -42,4 +41,4 @@ devices: [0]
 sync_batchnorm: True
 accelerator: "gpu"
 strategy: "ddp"
-precision: 16-mixed
+precision: 16
