--- a/scripts/linear/stl10/mmcr.yaml
+++ b/scripts/linear/stl10/mmcr.yaml
@@ -10,31 +10,31 @@ hydra:
   run:
     dir: .
 
-name: "barlow_twins-imagenet100-linear"
+name: "mmcr-stl10-linear"
 pretrained_feature_extractor: None
 backbone:
   name: "resnet18"
-pretrain_method: "barlow_twins"
+pretrain_method: "mmcr"
 data:
-  dataset: imagenet100
-  train_path: "./datasets/imagenet100/train"
-  val_path: "./datasets/imagenet100/val"
-  format: "dali"
-  num_workers: 16
+  dataset: stl10
+  train_path: "./datasets/stl10"
+  val_path: "./datasets/stl10"
+  format: "image_folder"
+  num_workers: 8
 optimizer:
   name: "sgd"
   batch_size: 256
-  lr: 0.1
+  lr: 0.01
   weight_decay: 0
 scheduler:
   name: "step"
-  lr_decay_steps: [60, 80]
+  lr_decay_steps: [40, 80]
 checkpoint:
   enabled: True
   dir: "trained_models"
   frequency: 1
 auto_resume:
-  enabled: True
+  enabled: False
 
 # overwrite PL stuff
 max_epochs: 100
@@ -42,4 +42,4 @@ devices: [0]
 sync_batchnorm: True
 accelerator: "gpu"
 strategy: "ddp"
-precision: 16-mixed
+precision: 16
