--- a/scripts/linear/stl10/mocov2.yaml
+++ b/scripts/linear/stl10/mocov2.yaml
@@ -10,21 +10,21 @@ hydra:
   run:
     dir: .
 
-name: "barlow_twins-imagenet100-linear"
-pretrained_feature_extractor: None
+name: "mocov2-stl10-linear"
+pretrained_feature_extractor: "/home/AD/ofsk222/Research/clones/solo-learn/trained_models/stl10_models/mocov2plus-stl10-h1om782q-ep=499.ckpt"
 backbone:
   name: "resnet18"
-pretrain_method: "barlow_twins"
+pretrain_method: "mocov2"
 data:
-  dataset: imagenet100
-  train_path: "./datasets/imagenet100/train"
-  val_path: "./datasets/imagenet100/val"
-  format: "dali"
-  num_workers: 16
+  dataset: stl10
+  train_path: "./datasets"
+  val_path: "./datasets"
+  format: "image_folder"
+  num_workers: 8
 optimizer:
   name: "sgd"
   batch_size: 256
-  lr: 0.1
+  lr: 0.3
   weight_decay: 0
 scheduler:
   name: "step"
@@ -34,7 +34,7 @@ checkpoint:
   dir: "trained_models"
   frequency: 1
 auto_resume:
-  enabled: True
+  enabled: False
 
 # overwrite PL stuff
 max_epochs: 100
