--- a/scripts/pretrain/stl10/dino.yaml
+++ b/scripts/pretrain/stl10/dino.yaml
@@ -11,26 +11,29 @@ hydra:
   run:
     dir: .
 
-name: "barlow_twins-imagenet100"
-method: "barlow_twins"
+name: "dino-stl10" # change here for cifar100
+method: "dino"
 backbone:
   name: "resnet18"
 method_kwargs:
   proj_hidden_dim: 2048
-  proj_output_dim: 2048
-  scale_loss: 0.1
+  proj_output_dim: 256
+  num_prototypes: 4096
+momentum:
+  base_tau: 0.9995
+  final_tau: 1.0
 data:
-  dataset: imagenet100
-  train_path: "./datasets/imagenet-100/train"
-  val_path: "./datasets/imagenet-100/val"
-  format: "dali"
-  num_workers: 4
+  dataset: cifar10 # change here for cifar100
+  train_path: "./datasets/stl10"
+  val_path: "./datasets/stl10"
+  format: "image_folder"
+  num_workers: 8
 optimizer:
   name: "lars"
-  batch_size: 128
+  batch_size: 256
   lr: 0.3
   classifier_lr: 0.1
-  weight_decay: 1e-4
+  weight_decay: 1e-6
   kwargs:
     clip_lr: True
     eta: 0.02
@@ -45,9 +48,9 @@ auto_resume:
   enabled: True
 
 # overwrite PL stuff
-max_epochs: 400
+max_epochs: 500
 devices: [0]
 sync_batchnorm: True
 accelerator: "gpu"
 strategy: "ddp"
-precision: 16-mixed
+precision: 16
