--- a/scripts/pretrain/stl10/empssl.yaml
+++ b/scripts/pretrain/stl10/empssl.yaml
@@ -1,6 +1,6 @@
 defaults:
   - _self_
-  - augmentations: asymmetric.yaml
+  - augmentations: empssl.yaml
   - wandb: private.yaml
   - override hydra/hydra_logging: disabled
   - override hydra/job_logging: disabled
@@ -11,23 +11,28 @@ hydra:
   run:
     dir: .
 
-name: "barlow_twins-imagenet100"
-method: "barlow_twins"
+name: "empssl-stl10" # change here for cifar100
+method: "empssl"
 backbone:
   name: "resnet18"
 method_kwargs:
-  proj_hidden_dim: 2048
-  proj_output_dim: 2048
-  scale_loss: 0.1
+  proj_hidden_dim: 4096
+  proj_output_dim: 512
+  tcr_epsilon: 0.2
+  tcr_weight: 1
+  inv_weight: 200
+  augment_val: True
+  num_crops_val: 20
+
 data:
-  dataset: imagenet100
-  train_path: "./datasets/imagenet-100/train"
-  val_path: "./datasets/imagenet-100/val"
-  format: "dali"
-  num_workers: 4
+  dataset: stl10 # change here for cifar100
+  train_path: "./datasets/stl10"
+  val_path: "./datasets/stl10"
+  format: "image_folder"
+  num_workers: 16
 optimizer:
   name: "lars"
-  batch_size: 128
+  batch_size: 256
   lr: 0.3
   classifier_lr: 0.1
   weight_decay: 1e-4
@@ -36,18 +41,20 @@ optimizer:
     eta: 0.02
     exclude_bias_n_norm: True
 scheduler:
-  name: "warmup_cosine"
+   name: "warmup_cosine"
+   warmup_epochs: 0
 checkpoint:
   enabled: True
   dir: "trained_models"
   frequency: 1
+  keep_prev: True
 auto_resume:
-  enabled: True
+  enabled: False
 
 # overwrite PL stuff
-max_epochs: 400
+max_epochs: 30
 devices: [0]
 sync_batchnorm: True
 accelerator: "gpu"
 strategy: "ddp"
-precision: 16-mixed
+precision: 32
