--- a/scripts/pretrain/stl10/simclr.yaml
+++ b/scripts/pretrain/stl10/simclr.yaml
@@ -1,5 +1,6 @@
 defaults:
   - _self_
+  - augmentations: symmetric.yaml
   - wandb: private.yaml
   - override hydra/hydra_logging: disabled
   - override hydra/job_logging: disabled
@@ -10,25 +11,32 @@ hydra:
   run:
     dir: .
 
-name: "barlow_twins-imagenet100-linear"
-pretrained_feature_extractor: None
+name: "simclr-stl10" # change here for cifar100
+method: "simclr"
 backbone:
   name: "resnet18"
-pretrain_method: "barlow_twins"
+method_kwargs:
+  proj_hidden_dim: 2048
+  proj_output_dim: 512
+  temperature: 0.5
 data:
-  dataset: imagenet100
-  train_path: "./datasets/imagenet100/train"
-  val_path: "./datasets/imagenet100/val"
-  format: "dali"
+  dataset: stl10 # change here for cifar100
+  train_path: "./datasets/stl10"
+  val_path: "./datasets/stl10"
+  format: "image_folder"
   num_workers: 16
 optimizer:
-  name: "sgd"
+  name: "lars"
   batch_size: 256
-  lr: 0.1
-  weight_decay: 0
+  lr: 0.3
+  classifier_lr: 0.1
+  weight_decay: 1e-4
+  kwargs:
+    clip_lr: True
+    eta: 0.02
+    exclude_bias_n_norm: True
 scheduler:
-  name: "step"
-  lr_decay_steps: [60, 80]
+  name: "warmup_cosine"
 checkpoint:
   enabled: True
   dir: "trained_models"
@@ -37,7 +45,7 @@ auto_resume:
   enabled: True
 
 # overwrite PL stuff
-max_epochs: 100
+max_epochs: 500
 devices: [0]
 sync_batchnorm: True
 accelerator: "gpu"
