--- a/scripts/utils/wandb_stl10_projdim_sweep.yaml
+++ b/scripts/utils/wandb_stl10_projdim_sweep.yaml
@@ -1,6 +1,6 @@
 program: main_pretrain.py
 project: augrelius
-name: augrelius_tradeoff_sweep
+name: augrelius_multiview
 
 command:
   - ${env}
@@ -22,6 +22,8 @@ parameters:
   method_kwargs.exclusive_loss_weight:
     values: [1.0, 2.0, 5.0]
   method_kwargs.invariance_loss_weight:
-    values: [1.0, 2.0, 5.0]
+    values: [10.0, 20.0]
   method_kwargs.proj_output_dim:
-    values: [256, 512]
+    values: [1024]
+  augmentations.0.num_crops:
+    values: [4, 8]
