--- a/scripts/pretrain/stl10/daisy.yaml
+++ b/scripts/pretrain/stl10/daisy.yaml
@@ -1,6 +1,6 @@
 defaults:
   - _self_
-  - augmentations: asymmetric.yaml
+  - augmentations: symmetric.yaml
   - wandb: private.yaml
   - override hydra/hydra_logging: disabled
   - override hydra/job_logging: disabled
@@ -11,21 +11,26 @@ hydra:
   run:
     dir: .
 
-name: "augrelius-imagenet100"
-method: "augrelius"
+name: "daisy-stl10"
+method: "daisy"
+#resume_from_checkpoint: "/home/AD/ofsk222/Research/opensource/solo-learn-fork/trained_models/augrelius/d4phnjn3/owl_cropsizes-d4phnjn3-ep=498.ckpt"
 backbone:
   name: "resnet18"
 method_kwargs:
   proj_hidden_dim: 2048
-  proj_output_dim: 2048
-  shared_dim: 1024
-  exclusive_dim: 1024
+  proj_output_dim: 1024
+  kernel_type: gaussian
+  alpha: 1.01
+  conde_loss_weight: 1.0
+  exclusive_loss_weight: 1.0
+  invariance_loss_weight: 20.0
 data:
-  dataset: imagenet100
-  train_path: "./datasets/imagenet-100/train"
-  val_path: "./datasets/imagenet-100/val"
-  format: "dali"
+  dataset: stl10 # change here for cifar100
+  train_path: "./datasets/stl10"
+  val_path: "./datasets/stl10"
+  format: "image_folder"
   num_workers: 16
+  augaware: True
 optimizer:
   name: "lars"
   batch_size: 256
@@ -43,11 +48,11 @@ checkpoint:
   dir: "trained_models"
   frequency: 1
 auto_resume:
-  enabled: True
+  enabled: False
 
 # overwrite PL stuff
-max_epochs: 400
-devices: [0]
+max_epochs: 500
+devices: [0, 1]
 sync_batchnorm: True
 accelerator: "gpu"
 strategy: "ddp"
